--- a/src/app/modules/books-shelf/books-shelf.component.html
+++ b/src/app/modules/books-shelf/books-shelf.component.html
@@ -1,32 +1,24 @@
 <div class="books-shelf" >
-    <h4>Books</h4>
-
+    <h2 class="title">Books</h2>
     <div class="card-list">
-        <mat-card class="card" *ngFor="let book of books$ |async"  >
-          <mat-card-header>
-            <!-- <div mat-card-avatar class="header-image"></div> -->
-            <!-- <mat-card-title>{{ user.firstName }}</mat-card-title>
-          <mat-card-subtitle>{{ user.lastName }}</mat-card-subtitle> -->
-          </mat-card-header>
+    <mat-card class="card" *ngFor="let book of books$ |async"  >
+      <mat-card-content>
+        <div class="image-card">
           <img mat-card-image src="{{ book.cover }}" alt="Photo of a Shiba Inu">
-          <mat-card-content>
+        </div>
             <div class="card-body">
               <p class="card-title">{{book.book}}</p>
               <p class="card-text">{{book.price  | currency:'ILS':'symbol'}}</p>
               <p class="card-text"> {{book.publisher}}</p>
+              <p class="card-text"> {{book.author}}</p>
             </div>
           </mat-card-content>
           <mat-card-actions>
             <div class="btn-group" role="group" aria-label="Basic example">
-              <button type="button" class="btn btn-info" [routerLink]="['/shopping/book-view', book.id]"
-                title="View book Details"> View</button>
-
-                <button type="button"  (click)="buyBook(book.id)">Buy Book</button>
-                <!-- [product]="book" [text]="'Cart'" -->
-              <!-- <app-cart-button-widget [book]="book" [text]="'B'"></app-cart-button-widget> -->
-
-              <!-- <app-user [book]="book" [text]="'Bsss'"></app-user> -->
-
+                <button type="button" mat-raised-button (click)="buyBook(book.id)">
+                  <mat-icon class="credit_card">credit_card</mat-icon>
+                  <span> Buy Book</span>
+                </button>
             </div>
           </mat-card-actions>
         </mat-card>
