--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="home">
+    <div class="welcome-home">
+        <h1 class="title">
+            CodeOasis Bookstore
+        </h1>
+    </div>
+</div>
