--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -6,6 +6,10 @@
       .title {
         cursor: pointer;
       }
+
+      .btn-user {
+        // background-color: #b0414154;
+      }
     }
     .spacer {
       flex: 1 1 auto;
