--- a/src/app/modules/auth/signin/signin.component.html
+++ b/src/app/modules/auth/signin/signin.component.html
@@ -1,20 +1,18 @@
-<div class="sign-in ">
+<div class="signin">
     <div class="container">
-      <span>
-        Login
-      </span>
+      <h2> Login Page</h2>
       <form #f="ngForm" (ngSubmit)="onSubmit(f)" class="signin-form">
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
-          <input matInput type="text" name="email" ngModel #email required>
+          <input matInput type="email" name="email" ngModel #email required>
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
           <input matInput type="password" name="password" ngModel #password required >
         </mat-form-field>
-  
-        <button class="btn-login" mat-raised-button type="submit" [disabled]='f.invalid' >כניסה</button>
-        <button class="btn-register" mat-raised-button routerLink="/auth/signup">הרשמה</button>
+        
+        <button class="btn btn-login" mat-raised-button type="submit"  color="primary" [disabled]='f.invalid'>Login</button>
+        <button class="btn btn-register" mat-raised-button routerLink="/auth/signup"  color="Warn">Register</button>
       </form>
     </div>
   </div>
