--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -1,19 +1,19 @@
 <div class="signup">
     <div class="container">
-      <span>
-        Signup
-      </span>
-      <form #f="ngForm" (ngSubmit)="onSubmit(f)" class="signin-form">
+      <h2>
+        Signup Page
+      </h2>
+      <form #f="ngForm" (ngSubmit)="onSubmit(f)" class="signup-form">
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
-          <input matInput type="text" name="email" ngModel #email required>
+          <input matInput type="email" name="email" ngModel #email required>
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
           <input matInput type="password" name="password" ngModel #password required >
         </mat-form-field>
   
-        <button class="btn-login" mat-raised-button type="submit" [disabled]='f.invalid' >כניסה</button>
+        <button class="btn-login" mat-raised-button type="submit" color="primary" [disabled]='f.invalid' >Register</button>
       </form>
     </div>
   </div>
